[project]
name = 'edzed'
dynamic = ['version']
description = 'An asyncio based library for building small automated systems'
keywords = ['automation', 'finite-state machine']
authors = [
	{name = 'Vlado Potisk', email = 'edzed@poti.sk'}
	]
license = {file = 'LICENSE.txt'}	# MIT license
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>=3.8'
dependencies = []
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
	]

[project.urls]
homepage = 'https://github.com/xitop/edzed'
repository = 'https://github.com/xitop/edzed'
documentation = 'https://edzed.readthedocs.io/en/latest/'

[project.optional-dependencies]
tests = ['pytest', 'pytest-asyncio', 'pytest-forked']

[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['edzed', 'edzed.blocklib', 'edzed.utils']

# this feature is still BETA
[tool.setuptools.dynamic]
version = {attr = 'edzed.__version__'}
